vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcfile-lonely-request-response-resource-conversion.warc
WARC/1.0
WARC-Type: request



WARC/1.0
WARC-Type: response



WARC/1.0
WARC-Type: resource



WARC/1.0
WARC-Type: conversion



